--- a/WPF/Windows/MainWindow.xaml
+++ b/WPF/Windows/MainWindow.xaml
@@ -80,7 +80,7 @@
                         <MenuItem Header="Filters">
                             <MenuItem Header="No filters!"></MenuItem>
                         </MenuItem>
-                        <MenuItem Header="Draw">
+                        <MenuItem Header="Draw" Visibility="{Binding IsCharacterOptionVisible, Converter={StaticResource BooleanToVisibilityConverter},ElementName=ToolOptionsViewModel}">
                             <MenuItem Header="Fill Selection" IsEnabled="{Binding HasSelected}" Command="{Binding FillSelectionCommand}" InputGestureText="Alt+F"></MenuItem>
                         </MenuItem>
                     </Menu>
@@ -116,10 +116,10 @@
                         <viewmodels:ToolOptionsViewModel x:Name="ToolOptionsViewModel"/>
                     </ScrollViewer.DataContext>
                     <StackPanel>
-                        <WrapPanel Visibility="{Binding IsCharacterOptionVisible, ElementName=ToolOptionsViewModel, Converter={StaticResource BooleanToVisibilityConverter}}">
-                            <WrapPanel.DataContext>
+                        <DockPanel Visibility="{Binding IsCharacterOptionVisible, ElementName=ToolOptionsViewModel, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            <DockPanel.DataContext>
                                 <viewmodels:CharacterPaletteSelectionViewModel x:Name="CharacterPaletteSelectionViewModel"/>
-                            </WrapPanel.DataContext>
+                            </DockPanel.DataContext>
                             <DockPanel DockPanel.Dock="Top">
                                 <Label Content="Palette" HorizontalAlignment="Left"/>
                                 <ComboBox Height="25" SelectedItem="{Binding SelectedPalette}" ItemsSource="{Binding Palettes}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
@@ -143,7 +143,7 @@
                                 <controls:ImageButton Margin="2,2,2,2" Width="{Binding ActualHeight, Mode=OneWay, RelativeSource={RelativeSource Self}}" Style="{DynamicResource Remove_Button}" Grid.Column="2" Command="{Binding RemovePaletteCommand}"/>
                             </Grid>
                             <controls:CharacterPaletteCharacterSelect VerticalAlignment="Top" Width="200" GridItemSize="45,45" MaxHeight="400" Margin="0,0,0,0" SelectedCharacter="{Binding SelectedCharacter, Mode=TwoWay}" Characters="{Binding SelectedPalette.Characters, Mode=OneWay}"/>
-                        </WrapPanel>
+                        </DockPanel>
                         <Rectangle HorizontalAlignment="Stretch" Margin="2" Stroke="{DynamicResource Border}" DockPanel.Dock="Top" Visibility="{Binding IsCharacterOptionVisible, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                         <WrapPanel Background="{DynamicResource LightAccent}" Visibility="{Binding IsSizeOptionVisible,Converter={StaticResource BooleanToVisibilityConverter}}">
                             <Label Content="Size" Height="30" Margin="5,0,0,0"></Label>
