--- a/WPF/Windows/ImageASCIIArtExportOptionsWindow.xaml
+++ b/WPF/Windows/ImageASCIIArtExportOptionsWindow.xaml
@@ -3,17 +3,28 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AAP.UI.Windows" xmlns:viewmodels="clr-namespace:AAP.UI.ViewModels"
+        xmlns:local="clr-namespace:AAP.UI.Windows" xmlns:viewmodels="clr-namespace:AAP.UI.ViewModels" xmlns:controls="clr-namespace:AAP.UI.Controls"
         mc:Ignorable="d"
         Title="Image ASCII Art Export Options" ResizeMode="NoResize" SizeToContent="WidthAndHeight" MinWidth="250" MinHeight="150" MaxWidth="350" MaxHeight="400">
     <DockPanel Background="{DynamicResource Background}">
         <DockPanel.DataContext>
             <viewmodels:ImageASCIIArtExportOptionsWindowViewModel x:Name="WindowViewModel"/>
         </DockPanel.DataContext>
-        <WrapPanel DockPanel.Dock="Top" Margin="10,5,10,5">
-            <Label Content="Text Size" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" Height="22" Text="{Binding TextSizeText}" Margin="8,0,0,0" Width="40" InputScope="Number" DockPanel.Dock="Right"/>
-        </WrapPanel>
+        <StackPanel DockPanel.Dock="Top" Margin="10,5,10,5">
+            <WrapPanel>
+                <Label Content="Text Size" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" Height="22" Text="{Binding TextSizeText}" Margin="8,0,0,0" Width="40" InputScope="Number" DockPanel.Dock="Right"/>
+            </WrapPanel>
+            <WrapPanel>
+                <Label Content="Art Color" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <controls:ColorPicker PickedColor="{Binding ArtColorBrush, Mode=TwoWay}"/>
+            </WrapPanel>
+            <WrapPanel>
+                <Label Content="Background Color" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <controls:ColorPicker PickedColor="{Binding BackgroundColorBrush, Mode=TwoWay}"/>
+            </WrapPanel>
+        </StackPanel>
+        
         <Button Margin="10,0,10,5" VerticalAlignment="Bottom" DockPanel.Dock="Bottom" Content="{Binding CloseButtonContent}" Command="{Binding CloseButtonCommand}"/>
     </DockPanel>
 </Window>
